--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@prisma/client": "6.9.0",
     "@supabase/supabase-js": "^2.46.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.4",
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "prisma": "6.9.0",
