--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Prisma generated clients (local benchmark-only)
+src/generated/
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
