--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "6.9.0",
+    "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.46.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.4",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "@prisma/extension-accelerate": "^1.2.1"
   },
   "devDependencies": {
-    "prisma": "6.9.0",
+    "prisma": "^6.13.0",
     "tsx": "^4.19.1",
     "typescript": "^5.5.3"
   },
